--- a/keda/server/k8s/nestjs-metrics/templates/deployment.yaml
+++ b/keda/server/k8s/nestjs-metrics/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
         prometheus.io/port: '3000'
     spec:
       containers:
-        - image: mguay/nestjs-metrics
+        - image: boovenus/nestjs-metrics
           name: nestjs-metrics
           ports:
             - containerPort: 3000
